--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "build": "rollup index.js -o dist/react-export.js -f iife",
     "lint": "xo --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "xo && ava"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ava": "^0.22.0",
     "rollup": "^0.50.0",
     "xo": "^0.18.2"
   },
