[KH] define peer deps

--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "xo": {
     "space": true,
     "semicolon": false
+  },
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-excel-workbook": "^0.0.4",
+    "react-pdf": "^2.1.7"
   }
 }
