--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Reporting first",
   "main": "src/index.js",
   "scripts": {
-    "lint": "xo --fix",
-    "test": "xo && ava"
+    "lint": "prettier --single-quote --no-semi --print-width 100 --write src/**/*.js",
+    "test": "lint && ava"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,7 @@
     "eslint": "^4.9.0",
     "eslint-config-xo-react": "^0.13.0",
     "eslint-plugin-react": "^7.4.0",
-    "xo": "^0.18.2"
+    "prettier": "^1.7.4"
   },
   "xo": {
     "space": true,
